tests/compile_fail/device_extension_as_instance.zig
const vk = @import("vulkan");

export fn deviceExtensionAsInstance() void {
    const options: vk.InstanceOptions = .{
        .extensions = &.{vk.extension.khr_swapchain},
    };
    _ = options;
}
